force-app/main/default/objects/Escalation_Log__c/Escalation_Log__c.object-meta.xml
<CustomObject>
    <label>Escalation Log</label>
    <pluralLabel>Escalation Logs</pluralLabel>
    <description
  >A historical record of support case escalations, capturing where an issue was escalated from and to, and why.</description>
    <sharingModel>Private</sharingModel>
    <nameField>
        <label>Escalation Number</label>
        <type>AutoNumber</type>
        <displayFormat>ESC-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
</CustomObject>