force-app/main/default/objects/Escalation_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Escalation Logs</relationshipLabel>
    <relationshipName>Escalation_Logs</relationshipName>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
    <description
  >The support case this escalation event relates to.</description>
</CustomField>