force-app/main/default/objects/Escalation_Log__c/fields/Escalated_From__c.field-meta.xml
<CustomField>
    <fullName>Escalated_From__c</fullName>
    <label>Escalated From</label>
    <type>Text</type>
    <length>80</length>
    <description
  >The team or role the case was escalated from (e.g. Tier 1 Support).</description>
</CustomField>