force-app/main/default/objects/Escalation_Log__c/fields/Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To__c</fullName>
    <label>Escalated To</label>
    <type>Text</type>
    <length>80</length>
    <description
  >The team or role the case was escalated to (e.g. Tier 2 Support, Escalation Reviewers).</description>
</CustomField>